# celery-stream

./: Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  tasks.py
templates/: index.html
