[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
celery = "^5.4.0"
flask = "^3.0.3"
flask-socketio = "^5.4.1"
gevent = "^24.10.2"
gevent-websocket = "^0.10.1"
redis = "^5.1.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
celery-types = "^0.22.0"
flake8 = "^7.1.1"
flake8-pyproject = "^1.2.3"
isort = {extras = ["colors"], version = "^5.13.2"}
mypy = "^1.12.0"
types-flask-socketio = "^5.4.0.20241002"
types-gevent = "^24.10.0.20241012"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.flake8]
max-line-length = 120
